Mon Nov 16 15:33:11 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* tool/rbinstall.rb: fix wrong permission for gem specification without
	  zlib runtime. [Bug #11685][ruby-dev:49343]

Mon Nov 16 12:11:11 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/webrick/httpauth/basicauth.rb: fix a typo.
	  [ci skip][fix GH-1099] Patch by @jwworth
	* lib/webrick/httpauth/digestauth.rb: ditto.

Sun Nov 15 18:28:43 2015  Kenichi Kamiya  <kachick1@gmail.com>

	* vm_method.c (set_method_visibility): should fail if the receiver
	  is frozen.  [ruby-core:71489] [Bug #11687]

Sat Nov 14 22:15:07 2015  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: Specify frozen_string_literal: true.

Sat Nov 14 21:44:56 2015  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb: Use "<<" to reduce string allocation.

Sat Nov 14 17:45:49 2015  Tanaka Akira  <akr@fsij.org>

	* lib/tsort.rb: Specify frozen_string_literal: true.

Sat Nov 14 17:25:15 2015  Tanaka Akira  <akr@fsij.org>

	* lib/resolv-replace.rb: Specify frozen_string_literal: true.

Sat Nov 14 17:00:13 2015  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb: Specify frozen_string_literal: true.

Sat Nov 14 16:43:02 2015  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb: Specify frozen_string_literal: true.

Sat Nov 14 05:04:09 2015  Koichi Sasada  <ko1@atdot.net>

	* node.h: remove old comments.

Sat Nov 14 04:55:36 2015  Koichi Sasada  <ko1@atdot.net>

	* refactoring CREF related code.

	* eval_intern.h: remove unused setter functions.
	  CREF_CLASS_SET()
	  CREF_NEXT_SET()
	  CREF_SCOPE_VISI_COPY()

	* eval_intern.h: rename flags:
	  * NODE_FL_CREF_PUSHED_BY_EVAL_ -> CREF_FL_PUSHED_BY_EVAL
	  * NODE_FL_CREF_OMOD_SHARED_ -> CREF_FL_OMOD_SHARED
	  and use IMEMO_FL_USER1/2.

	* vm.c (vm_cref_new): accept push_by_eval parameter.

	* vm.c (vm_cref_new_use_prev): added for rb_vm_rewrite_cref().

	* vm_insnhelper.c (vm_cref_push): accept pushed_by_eval parameter.

	* vm_insnhelper.h: remove unused macros:
	  COPY_CREF_OMOD() and COPY_CREF().